# django_starter

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.nodejs  Makefile  README.md  gunicorn_conf.py  manage.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.js
core/: admin.py  context_processors.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_userprofile.py
core/templates/core/: profile.html
djangauth/: asgi.py  settings.py  urls.py  wsgi.py
djangauth/settings/: common.py  develop.py
home/: urls.py  views.py
home/templates/: _base.html
home/templates/home/: index.html
scripts/: run.py
theme/static/src/: global.css  main.js
theme/templates/: _base.html
theme/templates/components/: button.html  navbar.html
